# SpaceCore

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  MIGRATION.md  README.md  audit_caching.md  audit_jit.md  pyproject.toml  test_speed.ipynb
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  contribution_task.md  feature_request.md
.github/workflows/: ci.yml  docs.yml
_release/: 0.3.1-rc-report.md
bench/: README.md  __init__.py  __main__.py  _dashboard.py  _devices.py  _diagnose.py  _generator_probes.py  _io.py  _operations.py  _probes.py  _regimes.py  _run.py  _seeds.py  _verdict.py  baseline.json  breakdown.py  cases.py  cost_model.py  dashboard.py  diagnose.py  harness.py  render.py  run.py  run_macro.py  run_micro.py
bench/macro/: __init__.py  _aggregate.py  _registry.py  _runner.py  _schema.py  cg_poisson.py  density_pipeline.py  jax_full_loop.py  operator_stress.py  pdhg.py  power_lanczos.py  qot_barycenter.py
docs/: README.md
docs/dev/: 0.3.1-docs-inventory.md  0.3.1-docstring-audit.md  0.4.1-bench-surface.md  current.md  docstring_style.md  vision.md
docs/source/: conf.py  index.rst  release_notes.rst
examples/: weighted_tikhonov.py
guides/: BackendOps.ipynb
scripts/: api_audit.py  docstring_audit.py  jit_audit.py  setup_labels.sh  verify_release_candidate.sh
spacecore/: __init__.py  _batching.py  _check_policy.py  _checks.py  _repr.py  _tree.py  _version.py
spacecore/_contextual/: __init__.py  _bound.py  _manager.py  _policies.py  _state.py  bound.py  contextual.py  manager.py
spacecore/backend/: __init__.py  _context.py  _eager.py  _family.py  _ops.py
spacecore/functional/: __init__.py  _algebra.py  _base.py  _composed.py  _linear.py  _quadratic.py
spacecore/kernels/: __init__.py  _registry.py  block_diagonal.py  composed.py
spacecore/linalg/: __init__.py  _cg.py  _expm.py  _lanczos.py  _lsqr.py  _power.py  _utils.py
spacecore/linop/: __init__.py  _algebra.py  _base.py  _dense.py  _diagonal.py  _metric.py  _product.py  _sparse.py
spacecore/optimize/: __init__.py  _common.py  _optax.py  _scipy.py
spacecore/space/: __init__.py  _base.py  _batch.py  _checks.py  _herm.py  _herm_mtx.py  _inner.py  _product.py  _stacked.py  _structure.py  _vector.py
spacecore/types/: __init__.py  _array.py  _array_like.py  _dense.py  _dtype.py  _misc.py  _sparse.py
test_generators/: README.md
test_generators/linop/: _dense.py  _sparse.py
tests/: _conformance.py  _helpers.py  test_backend_consistency.py  test_backend_jax_ops.py  test_backend_numpy_ops.py  test_backend_ops_complex.py  test_backend_registry.py  test_block_diagonal_linop.py  test_context.py  test_context_manager.py  test_context_resolution.py  test_conversion_linops.py  test_conversion_spaces.py  test_dense_linop.py  test_dtype_policy.py  test_errors.py  test_hermitian_space.py  test_linop_jit.py  test_product_space.py  test_public_api.py  test_repr.py  test_smoke_workflows.py  test_space_apply.py  test_sparse_linop.py  test_stacked_linop.py  test_sum_to_single_linop.py  test_vector_space.py  test_weighted_tikhonov.py
tests/backend/: _conformance.py  _references.py  conftest.py  test_backend_consistency.py  test_backend_conversion.py  test_backend_dtype_promotion.py  test_backend_family.py  test_backend_field_consistency.py  test_backend_jit.py  test_backend_loops.py  test_backend_ops_delegation.py  test_backend_optional_args.py  test_backend_registry.py  test_backend_vmap.py  test_conformance_cross_backend.py  test_conformance_numpy.py  test_context.py  test_cupy_ops.py  test_jax_ops.py  test_jax_pytree_class.py  test_lazy_namespace.py  test_numpy_ops.py  test_operations.py  test_torch_consistency.py  test_torch_ops.py  test_types_protocols.py
tests/bench/: test_bare_baseline.py  test_bench_smoke.py  test_macro_aggregate.py  test_macro_dashboard.py  test_macro_runner_smoke.py  test_macro_schema.py  test_regimes.py
tests/context/: conftest.py  test_check_policy.py  test_check_policy_helpers.py  test_checked_method.py  test_compatibility.py  test_context.py  test_context_bound.py  test_context_manager.py  test_context_resolution.py  (+5 more)
tutorials/: 01_backend_and_context.ipynb  02_linear_algebra.ipynb  03_functionals.ipynb  04_tree_spaces.ipynb  05_weighted_tikhonov.ipynb  06_optimal_transport.ipynb  07_manifold_descent.ipynb  08_pdhg_conic_program.ipynb  09_kernels_and_fusion.ipynb  1_BackendOps.ipynb  2_Context.ipynb  3_Space.ipynb  4_LinOp.ipynb  5_Conversion_Policy.ipynb  6_Regularized_Opt_Transport.ipynb  7_Quadratic_Program.ipynb  8_Linalg_MatrixFree.ipynb  9_Linalg_Comparison.ipynb  README.md  Space.ipynb  weighted_tikhonov.ipynb
(+278 files in other folders)
