[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spacecore"
version = "0.1.4"
description = "Backend-agnostic vector spaces and linear operators."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
  { name = "Pavlo Pelikh" }
]
dependencies = [
  "array-api-compat>=1.14.0",
  "numpy>=2.0.0",
  "scipy>=1.17",
]

keywords = [
  "linear-algebra",
  "jax",
  "pytorch",
  "numpy",
  "operators",
  "spaces",
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Mathematics",
]

[project.optional-dependencies]
jax = [
  "jax>=0.9.1",
]
torch = [
  "torch>=2.0",
]
examples = [
  "matplotlib>=3.8",
  "optax>=0.2",
]
docs = [
  "sphinx>=8.0",
  "pydata-sphinx-theme>=0.16",
  "sphinx-copybutton>=0.5",
  "sphinx-design>=0.6",
  "numpydoc>=1.8",
]
dev = [
  "pytest>=8.0",
    "ruff>=0.6",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["spacecore*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint.per-file-ignores]
"tutorials/*.ipynb" = ["E741"]
"tests/*.py" = ["E701"]
