[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spacecore"
dynamic = ["version"]
description = "Backend-agnostic vector spaces and linear operators."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
  { name = "Pavlo Pelikh" }
]
dependencies = [
  "array-api-compat>=1.14.0",
  "numpy>=2.0.0",
  "optree>=0.17.0",
  "psutil>=5.9.0",
  "scipy>=1.17",
]

keywords = [
  "linear-algebra",
  "jax",
  "pytorch",
  "numpy",
  "operators",
  "spaces",
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Mathematics",
]

[project.optional-dependencies]
jax = [
  "jax>=0.9.1",
]
# optax adapter (``spacecore.optimize.minimize_optax``); needs a JAX backend.
optax = [
  "jax>=0.9.1",
  "optax>=0.2",
]
torch = [
  "torch>=2.0",
]
cupy = [
  "cupy>=13.0",
]
# Dependencies needed to execute the tutorial notebooks under ``tutorials/``.
examples = [
  "matplotlib>=3.8",
]
docs = [
  "sphinx>=8.0",
  "pydata-sphinx-theme>=0.16",
  "sphinx-copybutton>=0.5",
  "sphinx-design>=0.6",
  "numpydoc>=1.8",
  # Registers the ``ipython3`` Pygments lexer that nbconvert-generated
  # tutorial RST uses, so the strict (`-W`) docs build does not fail on
  # "lexer not known" if a tutorial is regenerated with that directive.
  "ipython>=8.0",
]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5",
  "ruff>=0.6",
  "numpydoc>=1.7",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "spacecore._version.__version__"}

[tool.setuptools.packages.find]
where = ["."]
include = ["spacecore*"]

[tool.pytest.ini_options]
addopts = [
  "--doctest-modules",
  "--ignore-glob=spacecore/_contextual/*",
  "--ignore-glob=spacecore/backend/jax/_ops.py",
  "--ignore-glob=spacecore/backend/cupy/*",
  "--ignore-glob=spacecore/backend/torch/*",
]
testpaths = ["spacecore", "tests"]
doctest_optionflags = ["NORMALIZE_WHITESPACE", "ELLIPSIS", "NUMBER"]

[tool.ruff]
line-length = 100
target-version = "py311"
# Tutorial/example notebooks are prose-first teaching material; exempt them from
# linting (e.g. multi-statement plotting cells) so `ruff check .` covers the
# library and tests only.
extend-exclude = ["*.ipynb"]

[tool.ruff.lint]
ignore = [
  "D100",
  "D104",
  "D203",
  "D213",
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"tutorials/*.ipynb" = ["E402", "E741"]
"tests/*.py" = ["E701"]
"tests/*" = ["D"]
# Internal duck-typed check-free kernel cores: registered by name and documented
# at module level, not part of the public API, so they are exempt from the
# per-function missing-docstring rule.
"spacecore/kernels/core/*" = ["D103"]

[tool.numpydoc_validation]
checks = [
  "all",
  "ES01",
  "EX01",
  "SA01",
  "GL08",
]
exclude = [
  '\._',
  '\.tests\.',
  'test_',
]
